--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     font-family: 'Helvetica', Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #f8f8f8; /* Slightly lighter grey */
+    background-color: #f8f8f8;
     color: #333333;
 }
 
@@ -27,6 +27,13 @@ header {
     width: auto;
 }
 
+h1 {
+    font-size: 1.5em;
+    font-weight: 700;
+    color: #333333;
+    margin: 0;
+}
+
 .menu ul {
     list-style: none;
     display: flex;
@@ -40,80 +47,25 @@ header {
     font-size: 0.9em;
 }
 
-.intro {
-    padding: 20px;
-    max-width: 800px;
-    margin: 20px auto;
-}
-
-.form-section {
-    max-width: 600px;
-    margin: 40px auto;
-    padding: 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    background-color: #ffffff;
-}
-
-.form-section h2 {
-    margin-bottom: 20px;
-    font-weight: 600;
-    color: #333333;
-}
-
-.form-group {
-    margin-bottom: 20px;
-}
-
-.form-group label {
-    display: block;
-    margin-bottom: 8px;
-    font-weight: 400;
-    color: #333333;
-}
-
-.form-group input,
-.form-group select {
-    width: 100%;
-    padding: 10px;
-    border: 1px solid #dddddd;
-    background-color: #f9f9f9;
-    font-family: 'Helvetica', Arial, sans-serif;
-    font-size: 1em;
-    color: #333333;
-}
-
-button[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    background-color: #333333;
+hr {
     border: none;
-    color: #ffffff;
-    font-family: 'Helvetica', Arial, sans-serif;
-    font-size: 1em;
-    font-weight: 600;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
+    border-top: 1px solid #ccc;
+    margin: 20px 0;
 }
 
-button[type="submit"]:hover {
-    background-color: #555555;
-}
-
-footer {
-    text-align: center;
+.footer-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     padding: 20px;
-    font-size: 0.9em;
-    color: #999999;
-    background-color: #f8f8f8;
 }
 
-.x-link {
-    display: inline-block;
-    margin-top: 10px;
-}
-
-.x-img {
-    width: 30px;
+.footer-content img {
     height: 30px;
-    filter: invert(100%);
+    margin-right: 10px;
+}
+
+.footer-content p {
+    margin: 0;
+    font-weight: 600;
 }
